# atlas-knowledge-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/ai/chains/: retrieval_chain.py
app/ai/converters/: __init__.py  document_converter.py
app/ai/embeddings/: base.py  embedding_factory.py  embedding_service.py  local_provider.py  provider.py
app/ai/generation/: citation_builder.py  response_generator.py
app/ai/memory/: conversation_memory.py
app/ai/pipelines/: chat_pipeline.py  indexing_pipeline.py  ingestion_pipeline.py  retrieval_pipeline.py
app/ai/prompts/: templates.py
app/ai/retrieval/: base.py  chroma_retriever.py  hybrid_retriever.py  reranker.py
app/ai/splitters/: __init__.py  recursive_splitter.py
app/api/: router.py
app/core/: application.py  config.py  constants.py  dependencies.py  exceptions.py  logging.py
app/middleware/: exception.py  logging.py  request_id.py
app/observability/: metrics.py  tracing.py
app/shared/: file_utils.py  git_utils.py
app/workflows/: chat_workflow.py  ingestion_workflow.py  search_workflow.py  state.py
atlas/app/: main.py
docs/: architecture.excalidraw
tests/: conftest.py
tests/unit/: test_chat_endpoint.py  test_chat_service.py  test_chroma_retriever.py  test_document_converter.py  test_embedding_factory.py  test_embedding_service.py  test_generation.py  test_git_connector.py  test_health.py  test_indexing_pipeline.py  test_ingest_jobs.py  test_recursive_splitter.py  test_search_service.py  test_upload_and_parsers.py  test_workflows.py
(+90 files in other folders)
