[project]
name = "atlas-knowledge-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "gitpython>=3.1.50",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.black]
target-version = ["py311"]
